# dcbasecaller

./: LICENSE  README.md  __init__.py  callback.py  data_multifolder.py  eval.py  infer.py  metrics.py  model.py  pyproject.toml  test_data_multifolder_jsonl_flow.py  train_ddp_multifolder.py
basecall/: __init__.py  callback.py  ctc.py  ctc_crf.py  data_multifolder.py  eval.py  infer.py  inspect_ckpt.py  jsonl_to_npy.py  metrics.py  model.py  train_ddp_multifolder.py  utils.py
scripts/: test_data_multifolder_jsonl_flow.py  test_data_multifolder_split_logic.py
